fixed overlapping  layout for larger devices (tablets)

--- a/css/styles.css
+++ b/css/styles.css
@@ -426,7 +426,11 @@ h1#about-us-heading {
     text-align: center;
     font-size: 2em;
     font-weight: 100;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
+}
+
+div.podcasthost {
+    overflow: auto;
 }
 
 h2.name {
